header fixed collapsed navbar buttons

--- a/client/styles/sass/partials/_test.scss
+++ b/client/styles/sass/partials/_test.scss
@@ -60,20 +60,20 @@ ol, ul {
 
 
 }
-#logo  {
+.logo  {
 	color: #337A17;
 	position: relative;
 	font-family: fanwood;
   font-size: 7em;
   letter-spacing: .06em;
 }
-#logo:hover  {
+.logo:hover  {
 	color: #337ab7;
 	text-decoration: none;
 
 }
 
-#slogan {
+.slogan {
 		position: relative;
 		top:16px;
 		left: 61px;
